# whisper_streaming

./: LICENSE  MANIFEST.in  README.md  README_CN.md  __init__.py  cuda_requirements.txt  line_packet.py  mic_test_whisper_simple.py  mic_test_whisper_streaming.py  microphone_stream.py  pyproject.toml  requirements.txt  seamless_integration.py  setup.py  silero_vad.py  silero_vad_iterator.py  sounddevice_client.py  voice_activity_controller.py  whisper_fastapi_online_server.py  whisper_online.py  whisper_online_server.py  whisper_online_vac.py
src/: live_transcription.html
whisper_streaming/: __init__.py  line_packet.py  whisper_online.py  whisper_online_server.py
