[tool.poetry]
name = "whisper_streaming"
version = "0.1.0"
description = "Whisper realtime streaming for long speech-to-text transcription and translation"
authors = ["Dominik Macháček <machacek@ufal.mff.cuni.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
whisper_online = "whisper_streaming.whisper_online:main"
whisper_online_server = "whisper_streaming.whisper_online_server:main"

[tool.poetry.dependencies]
# Python 3.12 is not supported by "av", see https://github.com/PyAV-Org/PyAV/issues/1140
python = "3.11.*"
librosa = "~0.10.1"
faster-whisper = "~0.10.0"
openai-whisper = { version = "*", optional = true }
whisper-timestamped = { version = "^1.14.4", optional = true }

[tool.poetry.extras]
timestamped = ["openai-whisper", "whisper-timestamped"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
